<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.3</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.rogers.rmcdouga.fitg</groupId>
	<artifactId>svg-viewer</artifactId>
	<name>svg-viewer</name>
	<description>SVG Viewer for Freedom In The Galaxy Game</description>

	<properties>
		<!-- Spring dependency versions -->
		<java.version>16</java.version>
		<junit-jupiter.version>5.7.1</junit-jupiter.version>

		<!-- Local dependency versions -->
		<jfree-svg.version>4.1</jfree-svg.version>
		<jcabi-xml.version>0.21.5</jcabi-xml.version>
		<javapoet.version>1.13.0</javapoet.version>
		<image-comparison.version>4.4.0</image-comparison.version>

		<!-- Other local prjects -->
		<fitg.basegame.version>0.0.1-SNAPSHOT</fitg.basegame.version>
	</properties>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>org.jfree.svg</artifactId>
			<version>${jfree-svg.version}</version>
		</dependency>
		<dependency>
			<groupId>com.jcabi</groupId>
			<artifactId>jcabi-xml</artifactId>
			<version>${jcabi-xml.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.squareup</groupId>
			<artifactId>javapoet</artifactId>
			<version>${javapoet.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.rogers.rmcdouga</groupId>
			<artifactId>fitg.basegame</artifactId>
			<version>${fitg.basegame.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.romankh3</groupId>
			<artifactId>image-comparison</artifactId>
			<version>${image-comparison.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>